improved matching to inflation and exposed vars to classy

--- a/explanatory.ini
+++ b/explanatory.ini
@@ -22,6 +22,8 @@
 h =0.67556
 #100*theta_s = 1.042143
 
+model = 1 
+
 2) photon density: either 'T_cmb' in K or 'Omega_g' or 'omega_g' (default:
    'T_cmb' set to 2.7255)
 
@@ -482,7 +484,7 @@ ic = ad
    Newtonian/longitudinal gauge
    (default: set to synchronous)
 
-gauge = synchronous
+gauge = new
 
 ---------------------------------------------
 ----> define primordial perturbation spectra:
