added some mac-specific changes and Makefile. Sorry for the inconvenience for all others. you may want to diff python/setup.py and the official one. replaced another 0. by LCDM. otherwise, irrelevant changes that are old (like a debugging print statement and increased verbosity) that I should probably have discarded, assuming they make no difference (or get removed again). I am doing this commit after a long break.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 output/
-*~
+notebooks/
+*
 build/
 class
 *.prof
@@ -11,3 +12,8 @@ python/classy.c
 python/build/
 RealSpaceInterface/cache/
 .DS_Store
+notebooks/
+*.dsym
+Makefile
+.gitignore
+explanatory.ini
