--- a/explanatory.ini
+++ b/explanatory.ini
@@ -19,10 +19,11 @@
    (default: 'h' set to 0.67556)
 
 #H0 = 67.556
-h =0.67556
+h = 0.67556
 #100*theta_s = 1.042143
 
-model = 1 
+model = 1
+Minfl = 1.0e16
 
 2) photon density: either 'T_cmb' in K or 'Omega_g' or 'omega_g' (default:
    'T_cmb' set to 2.7255)
@@ -815,7 +816,7 @@ write thermodynamics = no
     wavenumbers k? Dimension of k is 1/Mpc. The actual wave numbers are chosen
     such that they are as close as possible to the requested k-values.
 
-k_output_values = #0.01, 0.1, 0.0001
+k_output_values = 0.066
 
 7g) Do you want to write the primordial scalar(/tensor) spectrum in a file,
     with columns k [1/Mpc], P_s(k) [dimensionless], ( P_t(k) [dimensionless])?
@@ -830,7 +831,7 @@ write primordial = no
     containing the letter 'y' or 'Y', file written, otherwise not written
     (default: not written)
 
-write parameters = yeap
+write parameters = no
 
 7i) Do you want a warning written in the standard output when an input
     parameter or value could not be interpreted ? If 'write warnings' set to
@@ -848,7 +849,7 @@ Increase integer values to make each module more talkative (default: all set to 
 input_verbose = 1
 background_verbose = 1
 thermodynamics_verbose = 1
-perturbations_verbose = 1
+perturbations_verbose = 4
 transfer_verbose = 1
 primordial_verbose = 1
 spectra_verbose = 1
